# toy-ed25519

./: Cargo.toml  README.md
benches/: ed25519_benchmark.rs
src/: field.rs  lib.rs  main.rs
